test/files/pos/t5604b/pack_1.scala
// sandbox/t5604/pack.scala
package t6504

object `package` extends T {
}
