test/files/neg/t6162-inheritance/usage.scala
package scala.t6126

class SubFoo extends Foo

object SubT extends T

object O {
  new S {
  }
}
